fixed the issue of the input line being dark and grey

--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -90,16 +90,29 @@
         <div class="card-container">
             <h3 class="main-title">Data</h3>
             <div class="card-wrapper">
-                <div class="payment-card">
-                    <div class="card-header">
+
+                <div class="account light-red">
+                    <div class="account-header">
                         <div class="amount">
-                            <span class="title">Payment amount</span>
+                            <span class="title">Claimed Amount</span>
                             <span class="amount-value">$400</span>
                         </div>
-                        <i class="fas fa-dollar-sign icon"></i>
+                        <i class="fas fa-dollar icon"></i>
                     </div>
-                    <span class="card-detail">***** ***** ***** 3486</span>
+                    <span class="account-detail">***** ***** ***** 3486</span>
                 </div>
+
+                <div class="account light-purple">
+                    <div class="account-header">
+                        <div class="amount">
+                            <span class="title">Claimed Order</span>
+                            <span class="amount-value">$200</span>
+                        </div>
+                        <i class="fas fa-dollar icon dark-purple"></i>
+                    </div>
+                    <span class="account-detail">***** ***** ***** 5589</span>
+                </div>
+
             </div>
         </div>
 
