creating a claims view

--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -94,10 +94,10 @@
                 <div class="account light-red">
                     <div class="account-header">
                         <div class="amount">
-                            <span class="title">Claimed Amount</span>
+                            <span class="title">Claimed amount</span>
                             <span class="amount-value">$400</span>
                         </div>
-                        <i class="fas fa-dollar icon"></i>
+                        <i class="fas fa-dollar icon dark-red"></i>
                     </div>
                     <span class="account-detail">***** ***** ***** 3486</span>
                 </div>
@@ -105,17 +105,49 @@
                 <div class="account light-purple">
                     <div class="account-header">
                         <div class="amount">
-                            <span class="title">Claimed Order</span>
-                            <span class="amount-value">$200</span>
+                            <span class="title">Claim order</span>
+                            <span class="amount-value">$0</span>
                         </div>
                         <i class="fas fa-dollar icon dark-purple"></i>
                     </div>
-                    <span class="account-detail">***** ***** ***** 5589</span>
+                    <span class="account-detail">***** ***** ***** 6698</span>
+                </div>
+
+                <div class="account light-green">
+                    <div class="account-header">
+                        <div class="amount">
+                            <span class="title">Clam proceed</span>
+                            <span class="amount-value">$400</span>
+                        </div>
+                        <i class="fas fa-dollar icon dark-green"></i>
+                    </div>
+                    <span class="account-detail">***** ***** ***** 7557</span>
                 </div>
 
             </div>
         </div>
 
+        <div class="tabular-wrapper" >
+            <h3 classs="main-title">Claims data</h3>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Claim ID</th>
+                            <th>Date Filed</th>
+                            <th>Type Of Claim</th>
+                            <th>Description</th>
+                            <th>Amount</th>
+                            <th>Asigned To</th>
+                            <th>Status</th>
+                            <th>Resolution Date</th>
+                            <th>Actions</th>
+                        </tr>
+
+                    </thead>
+                </table>
+            </div>
+        </div>
     </div>
 
 </div>
