The user dashboard is complete

--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -137,14 +137,36 @@
                             <th>Date Filed</th>
                             <th>Type Of Claim</th>
                             <th>Description</th>
+                            <th>Hours worked</th>
+                            <th>Hourly rate</th>
                             <th>Amount</th>
                             <th>Asigned To</th>
                             <th>Status</th>
                             <th>Resolution Date</th>
                             <th>Actions</th>
                         </tr>
+                    </thead> 
+                    <tbody>
+                        <tr>
+                        <td>004</td>
+                        <td>02/10/2024</td>
+                        <td>Breach</td>
+                        <td>They hacked my acc</td>
+                        <td>6hr</td>
+                        <td>$10</td>
+                        <td>$100</td>
+                        <td>Nkosana</td>
+                        <td>Pending</td>
+                        <td>14/11/2024</td>
+                        <td><button>Edit</button><button>Delete</button></td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="11">Total: 400</td>
+                        </tr>
+                    </tfoot>
 
-                    </thead>
                 </table>
             </div>
         </div>
