--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -9,7 +9,7 @@
     <ul class="menu">
         <li class="active">
             <a href="#" >
-                <i class="fas fa-tachometer-alt"></i>
+                <i class="bi bi-speedometer2"></i>
                 <span>Dashboard</span>
             </a>
         </li>
@@ -17,7 +17,7 @@
 
         <li>
             <a href="#">
-                 <i class="fas fa-user"></i>
+                    <i class="bi bi-person-circle"></i>
                 <span>Profile</span>
             </a>
         </li>
@@ -25,42 +25,42 @@
 
         <li>
             <a href="#">
-                <i class="fas fa-chart-bar"></i>
+                    <i class="bi bi-bar-chart-line-fill"></i>
                 <span>Statistics</span>
             </a>
         </li>
 
         <li>
             <a href="#">
-                <i class="fas fa-briefcase"></i>
+                    <i class="bi bi-briefcase-fill"></i>
                 <span>Career</span>
             </a>
         </li>
 
         <li>
             <a href="#">
-                <i class="fas fa-question-circle"></i>
+                    <i class="bi bi-question-circle"></i>
                 <span>FAQ</span>
             </a>
         </li>
 
         <li>
             <a href="#">
-                <i class="fas fa-star"></i>
+                    <i class="bi bi-stars"></i>
                 <span>Testimonials</span>
             </a>
         </li>
 
         <li>
             <a href="#">
-                <i class="fas fa-cog"></i>
+                    <i class="bi bi-gear"></i>
                 <span>Settings</span>
             </a>
         </li>
     
         <li class="logout">
             <a href="#">
-                <i class="fas fa-sign-out-alt"></i>
+                    <i class="bi bi-box-arrow-left"></i>
                 <span>Logout</span>
             </a>
         </li>
@@ -116,7 +116,7 @@
                 <div class="account light-green">
                     <div class="account-header">
                         <div class="amount">
-                            <span class="title">Clam proceed</span>
+                            <span class="title">Claim proceed</span>
                             <span class="amount-value">$400</span>
                         </div>
                         <i class="fas fa-dollar icon dark-green"></i>
@@ -128,7 +128,11 @@
         </div>
 
         <div class="tabular-wrapper" >
-            <h3 classs="main-title">Claims data</h3>
+            <div class="d-flex justify-content-between align-items-center">
+                <h3 classs="main-title">Your Claims</h3>
+                <a class="btn btn-success mb-2" asp-controller="Claim" asp-action="Create">Create Claim</a>
+            </div>
+           
             <div class="table-container">
                 <table>
                     <thead>
@@ -148,17 +152,21 @@
                     </thead> 
                     <tbody>
                         <tr>
-                        <td>004</td>
-                        <td>02/10/2024</td>
-                        <td>Breach</td>
-                        <td>They hacked my acc</td>
-                        <td>6hr</td>
-                        <td>$10</td>
-                        <td>$100</td>
-                        <td>Nkosana</td>
-                        <td>Pending</td>
-                        <td>14/11/2024</td>
-                        <td><button>Edit</button><button>Delete</button></td>
+                            <td>004</td>
+                            <td>02/10/2024</td>
+                            <td>Breach</td>
+                            <td>They hacked my acc</td>
+                            <td>6hr</td>
+                            <td>$10</td>
+                            <td>$100</td>
+                            <td>Nkosana</td>
+                            <td>Pending</td>
+                            <td>14/11/2024</td>
+                            <td><div class="d-flex flex-column">
+                                    <a class="btn btn-secondary btn-sm mb-2" asp-controller="Claim" asp-action="Edit" asp-route-id="">Edit</a>
+                                    <a class="btn btn-primary btn-sm" asp-controller="Claim" asp-action="Delete" asp-route-id="">Delete</a>
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                     <tfoot>
