--- a/TheGym/TheGym/Views/Home/_SignInPartial.cshtml
+++ b/TheGym/TheGym/Views/Home/_SignInPartial.cshtml
@@ -22,7 +22,7 @@
                    class="input-field"
                    autocomplete="off"
                    required />
-            <label for="name">Username Or Email</label>
+            <label class="input-label" for="name">Username Or Email</label>
         </div>
 
         <div class="input-wrap">
@@ -31,7 +31,7 @@
                    class="input-field"
                    autocomplete="off"
                    required />
-            <label for="password">Password</label>
+            <label class="input-label" for="password">Password</label>
         </div>
 
         <input type="submit" value="Sign In" class="sign-btn" />
