--- a/TheGym/TheGym/Views/Home/_SignUpPartial.cshtml
+++ b/TheGym/TheGym/Views/Home/_SignUpPartial.cshtml
@@ -20,7 +20,7 @@
                    class="input-field"
                    autocomplete="off"
                    required />
-            <label for="name">Name</label>
+            <label class="input-label" for="name">Name</label>
 
         </div>
 
@@ -30,7 +30,7 @@
                    class="input-field"
                    autocomplete="off"
                    required />
-            <label for="email">Email</label>
+            <label class="input-label" for="email">Email</label>
 
         </div>
 
@@ -40,7 +40,7 @@
                    class="input-field"
                    autocomplete="off"
                    required />
-            <label for="password">Password</label>
+            <label class="input-label" for="password">Password</label>
 
         </div>
 
