--- a/TheGym/TheGym/Views/Claim/CreateClaim.cshtml
+++ b/TheGym/TheGym/Views/Claim/CreateClaim.cshtml
@@ -7,7 +7,7 @@
     <div class="col-md-8 mx-auto rounded border p-4">
         <h2 class="text-center mb-4">New Claim</h2>
 
-        <form method="post" asp-controller="Claim">
+        <form method="post" asp-controller="Claim"  class="claim_form">
             <!-- Your Name -->
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label" for="name">Your Name</label>
