--- a/TheGym/TheGym/Views/Home/_SignUpPartial.cshtml
+++ b/TheGym/TheGym/Views/Home/_SignUpPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TheGym.Models.SignUp
 
 <!--Sign up-->
-<form method="post" asp-controller="User" asp-action="SignUp" enctype="multipart/form-data" autocomplete="off" class="sign-up-form">
+<form method="post" asp-controller="User" asp-action="SignUp" enctype="multipart/form-data" autocomplete="off" class="form sign-up-form">
     <div class="logo">
         <img src="./images/C_Logo.png" alt="contractly" />
         <h4>Contractly</h4>
