Adding logic to save data to the database

--- a/TheGym/TheGym/Views/Claim/CreateClaim.cshtml
+++ b/TheGym/TheGym/Views/Claim/CreateClaim.cshtml
@@ -7,7 +7,7 @@
     
         <h2 class="text-center mb-4">New Claim</h2>
 
-        <form method="post" asp-controller="Claim"  class="row g-3 claim_form">
+    <form method="post" asp-controller="Claim" asp-action="CreateClaim" class="row g-3 claim_form" enctype="multipart/form-data">
             <!-- Your Name -->
         <div class="row mb-3">
             <div class="col-md-6">
