Now have different user dashboard

--- a/TheGym/TheGym/Views/Dashboard/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Dashboard/Dashboard.cshtml
@@ -82,7 +82,7 @@
                     <i class="fa-solid fa-search"></i>
                     <input type="text" placeholder="Search" />
                 </div>
-                <img src="~/images/img.jpeg"/>
+                <img src="~/images/man-avatar.png"/>
             </div>
         </div>
 
