--- a/TheGym/TheGym/Views/Dashboard/PCAdminDashboard.cshtml
+++ b/TheGym/TheGym/Views/Dashboard/PCAdminDashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "AdminDashboard";
+    ViewData["Title"] = "PC AdminDashboard";
 }
 <div class="dashboard">
     <div class="sidebar">
@@ -71,7 +71,7 @@
     <div class="dash-main-content">
         <div class="header-wrapper">
             <div class="header-title">
-                <span>Admin</span>
+                <span>Programme Coordinator</span>
                 <h2>Dashboard</h2>
             </div>
 
@@ -81,57 +81,15 @@
                     <i class="fa-solid fa-search"></i>
                     <input type="text" placeholder="Search" />
                 </div>
-                <img src="~/images/img.jpeg" />
+                <img src="~/images/woman-avatar.png" />
             </div>
         </div>
-
-        <!-- 'User data'-->
-        <div class="card-container">
-            <h3 class="main-title">Data</h3>
-            <div class="card-wrapper">
-
-                <div class="account light-red">
-                    <div class="account-header">
-                        <div class="amount">
-                            <span class="title">Claimed amount</span>
-                            <span class="amount-value">$400</span>
-                        </div>
-                        <i class="fas fa-dollar icon dark-red"></i>
-                    </div>
-                    <span class="account-detail">***** ***** ***** 3486</span>
-                </div>
-
-                <div class="account light-purple">
-                    <div class="account-header">
-                        <div class="amount">
-                            <span class="title">Claim order</span>
-                            <span class="amount-value">$0</span>
-                        </div>
-                        <i class="fas fa-dollar icon dark-purple"></i>
-                    </div>
-                    <span class="account-detail">***** ***** ***** 6698</span>
-                </div>
-
-                <div class="account light-green">
-                    <div class="account-header">
-                        <div class="amount">
-                            <span class="title">Claim proceed</span>
-                            <span class="amount-value">$400</span>
-                        </div>
-                        <i class="fas fa-dollar icon dark-green"></i>
-                    </div>
-                    <span class="account-detail">***** ***** ***** 7557</span>
-                </div>
-
-            </div>
-        </div>
-
 
         <!--Tebular-->
         <div class="tabular-wrapper">
             <div class="d-flex justify-content-between align-items-center">
-                <h3 classs="main-title">Your Claims</h3>
-                <a class="btn btn-success mb-2" asp-controller="Claim" asp-action="CreateClaim">Create Claim</a>
+                <h3 classs="main-title">Your Request Claims</h3>
+                <a class="btn btn-success mb-2" asp-controller="" asp-action="">View Histroy</a>
             </div>
 
             <div class="table-container">
@@ -165,8 +123,8 @@
                             <td>14/11/2024</td>
                             <td>
                                 <div class="d-flex flex-column">
-                                    <a class="btn btn-secondary btn-sm mb-2" asp-controller="Claim" asp-action="Edit" asp-route-id="">Edit</a>
-                                    <a class="btn btn-primary btn-sm" asp-controller="Claim" asp-action="Delete" asp-route-id="">Delete</a>
+                                    <a class="btn btn-secondary btn-sm mb-2" asp-controller="" asp-action="" asp-route-id="">Approve</a>
+                                    <a class="btn btn-primary btn-sm" asp-controller="" asp-action="" asp-route-id="">Deny</a>
                                 </div>
                             </td>
                         </tr>
